--- a/Application/requirements.txt
+++ b/Application/requirements.txt
@@ -1,7 +1,7 @@
 django
 mysql-connector-python
 mysqlclient
-pip3 install torch torchvision torchaudio
+torch torchvision torchaudio
 transformers
 sentencepiece
 protobuf
