--- a/Application/requirements.txt
+++ b/Application/requirements.txt
@@ -1,7 +1,9 @@
 django
 mysql-connector-python
 mysqlclient
-torch torchvision torchaudio
+torch
+torchvision 
+torchaudio
 transformers
 sentencepiece
 protobuf
